--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -4,6 +4,11 @@ body {
     //font-family: 'Princess Sofia', cursive;
 }
 
+.navbar-expand-md .navbar-nav .nav-link {
+    padding-right: .4rem;
+    padding-left: .4rem;
+}
+
 h2 {
     font-family: 'Roboto Slab', serif;
     font-size: .9em;
@@ -15,10 +20,10 @@ h2 {
     text-align: center;
     font-size: 4em;
     margin-top: 20px;
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     color: white;
     span {
-        vertical-align: middle;
+        font-family: 'Open Sans Condensed';
     }
 }
 
