--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -14,6 +14,13 @@ h2 {
     font-size: .9em;
     color: white;
     text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.big-icon {
+    font-size: 90px;
 }
 
 .big-text {
@@ -82,6 +89,9 @@ h2 {
 }
 
 .footer {
-    height: 300px;
+    height: 75px;
     background: #17a2b8;
+    border-top: 2px solid black;
+    color: white;
+    padding-top: 20px;
 }
