--- a/css/style.css
+++ b/css/style.css
@@ -6210,7 +6210,13 @@ h2 {
   font-family: 'Roboto Slab', serif;
   font-size: .9em;
   color: white;
-  text-align: center; }
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.big-icon {
+  font-size: 90px; }
 
 .big-text {
   text-align: center;
@@ -6270,7 +6276,200 @@ h2 {
     left: 0; }
 
 .footer {
-  height: 300px;
-  background: #17a2b8; }
+  height: 75px;
+  background: #17a2b8;
+  border-top: 2px solid black;
+  color: white;
+  padding-top: 20px; }
+
+/*.roadmap {
+    margin: 50px 0;
+    .roadmap-element {
+        position: relative;
+        hr {
+            position: absolute;
+            top: -20px;
+            width: 40px;
+            border: 2px solid #ddd;
+        }
+        &.roadmap-left {
+            text-align: right;
+            border-right: 5px solid #17a2b8;
+            padding-right: 80px;
+            hr {
+                right: 20px;
+            }
+            @include media-breakpoint-down(sm) {
+                &:nth-child(even) {
+                padding-right: 15px;
+                flex-grow: 0;
+                }
+            }
+        }
+        &.roadmap-right {
+            text-align: left;
+            border-left: 5px solid #17a2b8;
+            padding-left: 80px;
+            hr {
+                left: 20px;
+            }
+            .roadmap-circle {
+                position: absolute;
+                top: -18px;
+                left: -18px;
+                height: 26px;
+                width: 26px;
+                border-radius: 50%;
+                background: gray;
+                border: 4px solid #17a2b8;
+            }
+        }
+        .roadmap-step {
+            margin-top: -10px;
+            padding-bottom: 10px;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 22px;
+            color: #17a2b8;
+        }
+        .roadmap-caption {
+            padding-bottom: 10px;
+            line-height: 34px;
+            font-size: 28px;
+            font-weight: 700;
+            color: #000;
+            font-family: light !important;
+            -webkit-font-smoothing: antialiased;
+        }
+    }
+}*/
+.roadmap {
+  margin: 50px 0; }
+  .roadmap .header {
+    color: #17a2b8;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 40px; }
+  .roadmap .roadmap-row .roadmap-element {
+    position: relative;
+    padding-bottom: 10px; }
+    .roadmap .roadmap-row .roadmap-element hr {
+      position: absolute;
+      top: -20px;
+      width: 40px;
+      border: 2px solid #ddd; }
+    .roadmap .roadmap-row .roadmap-element .roadmap-step {
+      margin-top: -11px;
+      padding-bottom: 10px;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-family: fantasy;
+      font-weight: 500;
+      line-height: 22px;
+      color: #17a2b8; }
+    .roadmap .roadmap-row .roadmap-element .roadmap-caption {
+      padding-bottom: 10px;
+      line-height: 34px;
+      font-size: 28px;
+      font-weight: 700;
+      color: #000;
+      -webkit-font-smoothing: antialiased; }
+    @media (min-width: 576px) {
+      .roadmap .roadmap-row .roadmap-element .roadmap-description ul {
+        padding-right: 20px; } }
+    .roadmap .roadmap-row .roadmap-element .roadmap-description ul li {
+      position: relative;
+      list-style: none; }
+      .roadmap .roadmap-row .roadmap-element .roadmap-description ul li:before {
+        content: '';
+        position: absolute;
+        top: 10px;
+        left: -25px;
+        width: 20px;
+        border: 2px solid #ddd; }
+        @media (min-width: 576px) {
+          .roadmap .roadmap-row .roadmap-element .roadmap-description ul li:before {
+            right: 0; } }
+    .roadmap .roadmap-row .roadmap-element .roadmap-circle {
+      position: absolute;
+      top: -18px;
+      left: -18px;
+      height: 26px;
+      width: 26px;
+      border-radius: 50%;
+      background: #ddd;
+      border: 4px solid #f0f0f0; }
+      .roadmap .roadmap-row .roadmap-element .roadmap-circle.complete {
+        border: 4px solid #17a2b8; }
+    .roadmap .roadmap-row .roadmap-element .roadmap-triangle {
+      position: absolute;
+      left: -25px;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-top: 20px solid #f0f0f0; }
+      .roadmap .roadmap-row .roadmap-element .roadmap-triangle:before {
+        content: '';
+        position: absolute;
+        top: -16px;
+        left: -10px;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 10px solid #ddd; }
+    .roadmap .roadmap-row .roadmap-element.roadmap-left {
+      text-align: right;
+      border-right: 5px solid #ddd;
+      padding-right: 80px; }
+      .roadmap .roadmap-row .roadmap-element.roadmap-left hr {
+        right: 20px; }
+      .roadmap .roadmap-row .roadmap-element.roadmap-left.complete {
+        border-right: 5px solid #17a2b8; }
+    .roadmap .roadmap-row .roadmap-element.roadmap-right {
+      text-align: left;
+      border-left: 5px solid #ddd;
+      padding-left: 80px; }
+      .roadmap .roadmap-row .roadmap-element.roadmap-right hr {
+        left: 20px; }
+      .roadmap .roadmap-row .roadmap-element.roadmap-right.complete {
+        border-left: 5px solid #17a2b8; }
+  @media (max-width: 767px) {
+    .roadmap .roadmap-row:nth-child(even) .roadmap-left {
+      flex-grow: 0;
+      padding-right: 15px; } }
+  @media (min-width: 768px) {
+    .roadmap .roadmap-row:nth-child(odd) .roadmap-description {
+      padding-right: 15px; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-description ul li:before {
+        display: none; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-description ul li:after {
+        content: '';
+        position: absolute;
+        right: -30px;
+        top: 10px;
+        width: 20px;
+        border: 2px solid #ddd; } }
+  @media (max-width: 767px) {
+    .roadmap .roadmap-row:nth-child(odd) .roadmap-left {
+      order: 1;
+      text-align: left;
+      border-left: 5px solid #ddd;
+      padding-left: 80px;
+      border-right: none; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-left hr {
+        left: 20px;
+        right: initial; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-left.complete {
+        border-left: 5px solid #17a2b8; }
+    .roadmap .roadmap-row:nth-child(odd) .roadmap-right {
+      order: 0;
+      padding-left: 15px;
+      flex-grow: 0;
+      border-right: 5px solid #ddd;
+      border-left: none; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-right .roadmap-circle {
+        left: 7px; }
+      .roadmap .roadmap-row:nth-child(odd) .roadmap-right.complete {
+        border-right: 5px solid #17a2b8; } }
 
 /*# sourceMappingURL=style.css.map */
