A few more css changes

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -68,7 +68,8 @@ h2 {
             position: absolute;
             font-family: 'Princess Sofia';
             top: 0px;
-            padding-top: 14px;
+            padding-top: 23px;
+            line-height: 30px;
             text-align: center;
             left: 0;
             right: 0;
